<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <view
        android:id="@+id/view9"
        class="com.google.android.material.card.MaterialCardView"
        android:layout_width="0dp"
        android:layout_height="107dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view10">


        <TextView
            android:id="@+id/textViewSaida"
            android:layout_width="127dp"
            android:layout_height="24dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/saida"
            android:textAlignment="textStart"
            android:textStyle="bold"
            android:visibility="visible"
            app:layout_constraintStart_toStartOf="@+id/view4"
            app:layout_constraintTop_toTopOf="@+id/view4" />

        <TextView
            android:id="@+id/textViewSaidaSaldo"
            android:layout_width="345dp"
            android:layout_height="33dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="56dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/sifrao"
            android:textAlignment="textStart"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@+id/view4"
            app:layout_constraintEnd_toEndOf="@+id/view4"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/view4"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:layout_constraintVertical_bias="0.0" />

    </view>

    <view
        android:id="@+id/view10"
        class="com.google.android.material.card.MaterialCardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/textViewEntrada"
            android:layout_width="127dp"
            android:layout_height="24dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/entrada"
            android:textAlignment="textStart"
            android:textStyle="bold"
            android:visibility="visible"
            app:layout_constraintStart_toStartOf="@+id/view4"
            app:layout_constraintTop_toTopOf="@+id/view4" />

        <TextView
            android:id="@+id/textViewEntradaSaldo"
            android:layout_width="345dp"
            android:layout_height="33dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="52dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/sifrao"
            android:textAlignment="textStart"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@+id/view4"
            app:layout_constraintEnd_toEndOf="@+id/view4"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/view4"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:layout_constraintVertical_bias="0.0" />

    </view>

    <view
        android:id="@+id/view4"
        class="com.google.android.material.card.MaterialCardView"
        android:layout_width="0dp"
        android:layout_height="107dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/green"
        android:backgroundTint="@color/green"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view9">


        <TextView
            android:id="@+id/textViewTotal"
            android:layout_width="127dp"
            android:layout_height="24dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/total"
            android:textAlignment="textStart"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:visibility="visible"
            app:layout_constraintStart_toStartOf="@+id/view4"
            app:layout_constraintTop_toTopOf="@+id/view4" />

        <TextView
            android:id="@+id/textViewTotalSaldo"
            android:layout_width="345dp"
            android:layout_height="33dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="52dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/sifrao"
            android:textAlignment="textStart"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@+id/view4"
            app:layout_constraintEnd_toEndOf="@+id/view4"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/view4"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:layout_constraintVertical_bias="0.0" />

    </view>

    <Button
        android:id="@+id/buttonNovaTransacao"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/nova_transacao"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/transacao"
        android:layout_width="0dp"
        android:layout_height="19dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view4" />

</androidx.constraintlayout.widget.ConstraintLayout>